--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+services:
   prometheus:
     image: quay.io/prometheus/prometheus:v2.32.0
     user: root
@@ -29,3 +30,7 @@
       - prometheus
     networks:
       - external_network
+
+networks:
+  external_network:
+    driver: bridge
