--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,19 @@ services:
     networks:
       - external_network
 
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    container_name: node_exporter
+    command:
+      - '--path.rootfs=/host'
+    network_mode: host
+    pid: host
+    restart: unless-stopped
+    volumes:
+      - '/:/host:ro,rslave'
+    networks:
+      - external_network
+
 networks:
   external_network:
     driver: bridge
